--- a/appsettings.json
+++ b/appsettings.json
@@ -5,6 +5,6 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
-    "ConnectionStrings": { "MyCnn": "Data Source=.;Initial Catalog=LibraryManagementSystem; Trusted_Connection=SSPI;Encrypt=false;TrustServerCertificate=true" },
+  "ConnectionStrings": { "MyCnn": "server=DESKTOP-G3JJ958\\QUANG;database=LibraryManagementSystem;user=sa;password=123;TrustServerCertificate=True;" },
     "AllowedHosts": "*"
 }
