--- a/appsettings.json
+++ b/appsettings.json
@@ -5,6 +5,6 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
-  "ConnectionStrings": { "MyCnn": "server=DESKTOP-G3JJ958\\QUANG;database=LibraryManagementSystem;user=sa;password=123;TrustServerCertificate=True;" },
+  "ConnectionStrings": { "MyCnn": "server=.;database=LibraryManagementSystem;user=sa;password=123;TrustServerCertificate=True;" },
     "AllowedHosts": "*"
 }
